Fix preview image stretching while dragging

--- a/src/Components/ModSearchRow.global.scss
+++ b/src/Components/ModSearchRow.global.scss
@@ -11,7 +11,6 @@
     img {
         width: 16rem;
         max-width: 30%;
-        height: 100%;
         display: inline-block;
         vertical-align: middle;
     }
